# metrics-monitoring-system

./: .gitignore  Dockerfile  GRPC_INTEGRATION.md  README.md  config.env.example  docker-compose.yml  metrics.json  package-lock.json  requirements.md  system.yaml
api-server/: Dockerfile  package-lock.json  package.json
api-server/src/: server.ts
metrics-agent/: Dockerfile  agent.py  agent_grpc.py  requirements.txt  test_pb2.py  test_pb2_grpc.py
metrics-dashboard/: Dockerfile  package-lock.json  package.json
metrics-dashboard/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
metrics-dashboard/.next/dev/: build-manifest.json  prerender-manifest.json  trace
metrics-dashboard/.next/dev/cache/: .rscinfo  chrome-devtools-workspace-uuid
metrics-dashboard/.next/dev/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
metrics-dashboard/.next/dev/server/app/: page.js  page_client-reference-manifest.js
metrics-dashboard/.next/dev/server/pages/: _app.js  (+3 more)
metrics-dashboard/.next/types/: validator.ts
metrics-dashboard/app/: page.tsx
metrics-dashboard/app/api/: api.ts  db.ts  metrics.ts  test-rpc.ts  types.ts
metrics-dashboard/components/: AreaChart.tsx  Client.tsx  DonutChart.tsx  LineChart.tsx  MemoryDonutChart.tsx  Metrics.tsx  SparkArea.tsx  SparkChart.tsx  TempAreaChart.tsx  UtilLineChart.tsx
metrics-dashboard/components/ui/: badge.tsx
metrics-dashboard/pages/api/: grpc-metrics.ts
metrics-server/: .gitignore  Cargo.toml  Dockerfile  build.rs
metrics-server/src/: main.rs
proto/test/: test.proto
(+277 files in other folders)
