[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix-web = "4.9"
mongodb = "3.4"
futures = "0.3"
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.42", features = ["full"] }
chrono = "0.4"


[build-dependencies]
tonic-build = "0.12"




